tests/errors/test_07.x
// Incompatible type for this binary operator

fn main() -> void {

    let x: i64 = 1 + true;

    let x1: i8 = "false" - 19;

}